--- a/app/src/main/res/layout/duplicate_list.xml
+++ b/app/src/main/res/layout/duplicate_list.xml
@@ -30,17 +30,18 @@
 	
     
     <EditText
-        android:hint="@string/enterListName"
-        android:inputType="text"
         android:id="@+id/listNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="@string/enterListName"
+        android:inputType="text"
         android:visibility="invisible"
 />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal" 
        >
 
@@ -49,15 +50,15 @@
 
             android:id="@+id/cancelBtn"
             android:layout_width="0dp"
-        	android:layout_weight=".5"
             android:layout_height="wrap_content"
+            android:layout_weight=".5"
             android:text="@string/cancel" />
 
         <Button
             android:id="@+id/okBtn"
             android:layout_width="0dp"
-            android:layout_weight=".5"
             android:layout_height="wrap_content"
+            android:layout_weight=".5"
             android:text="@string/ok" />
 
     </LinearLayout>
