--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
 	<dimen name="default_header_size">10dp</dimen>
 	<dimen name="margin">2dp</dimen>
 	<dimen name="dialog_padding">5dp</dimen>
+	<dimen name="edittext_padding">5dp</dimen>
 	<dimen name="image_view_max_width">400dp</dimen>
 
 	<dimen name="item_height">67dp</dimen>
