--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,7 +39,7 @@
         <item name="android:background">@drawable/edittextbasestyle</item>
         <item name="android:padding">4dp</item>
         <item name="android:fontFamily">fonts/RobotoCondensed-Regular.ttf</item>
-
+        <item name="android:textColor">@color/edit_text_color</item>
     </style>
     <style name="button_style" parent="android:Widget.Button">
         <item name="android:textColor">@color/edit_text_color</item>
@@ -115,7 +115,10 @@
     <style name="CheckboxStyle">
         <item name="android:background">@drawable/custom_checkbox_design</item>
     </style>
-    <style name="RadioButtonStyle">
-        <item name="android:background">@drawable/radiobutton_custom</item>
+
+    <style name="RadioButtonStyle" parent="@android:style/Widget.CompoundButton.RadioButton">
+        <item name="android:textColor">@color/edit_text_color</item>
+        <item name="android:textSize">@dimen/default_text_size</item>
+        <item name="android:fontFamily">fonts/RobotoCondensed-Regular.ttf</item>
     </style>
 </resources>
