--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,7 +46,7 @@
     <style name="defaultDialog" parent="@android:style/Theme.DeviceDefault.Dialog">
         <item name="android:background">@drawable/dialog</item>
         <item name="android:windowBackground">@drawable/dialog</item>
-        <item name="android:minWidth" type="dimen">200dp</item>
+        <item name="android:minWidth" type="dimen">100dp</item>
         <item name="android:padding">@dimen/dialog_padding</item>
         <item name="android:buttonStyle">@style/button_style</item>
         <item name="android:buttonBarButtonStyle">@style/button_style</item>
@@ -55,6 +55,7 @@
         <item name="android:spinnerStyle">@style/SpinnerTheme</item>
         <item name="android:checkboxStyle">@style/CheckboxStyle</item>
         <item name="android:radioButtonStyle">@style/RadioButtonStyle</item>
+        <item name="android:editTextStyle">@style/edittext_style</item>
 
 
     </style>
