--- a/app/src/main/res/values/messages.xml
+++ b/app/src/main/res/values/messages.xml
@@ -17,8 +17,8 @@
 	<string name="eventRemoved">An external application has removed this event from your calendar.</string>
 	<string name="endDateError">End Date should be later than Start Date</string>
 	<string name="deleteEventsMessage">You have calendar events associated with this list. Do you want to delete these events?</string>
-	<string name="honeDewItImporting">HoneyDew It is importing list</string>
-	<string name="importMessage">HoneyDew It supports importing data from either an .xls,.xlsx, .txt or .csv file. Just open the file on your phone and click the HoneyDewIt icon. The first row in all files must have an \"item\" header. There is also an option to add the following: \"quantity\", \"description\", \"discount\", \"unit\" type,  as well as \"price\" per item. If you do not supply a quantity then a default quantity of 1 will be set. If using a .txt or .csv file please separate values by a \^. If you are importing from an .xls or .xlsx file then you have the ability to create separate lists for each sheet in the workbook. Please look at the images below for a sample of all files.</string>
+	<string name="appImporting">is currently importing list</string>
+	<string name="importMessage"> supports importing data from either an .xls,.xlsx, .txt or .csv file. Just open the file on your phone and click the application icon when it asks which application you want to open the document in. The first row in all files must have an \"item\" header. There is also an option to add the following: \"quantity\", \"description\", \"discount\", \"unit\" type,  as well as \"price\" per item. If you do not supply a quantity then a default quantity of 1 will be set. If using a .txt or .csv file please separate values by a \^. If you are importing from an .xls or .xlsx file then you have the ability to create separate lists for each sheet in the workbook. Please look at the images below for a sample of all files.</string>
 	<string name="importError">There was an error reading the file. This can sometimes happen if the file is corrupt or has the incorrect file extension.</string>
 	<string name="invalidPrice">Please enter a valid price.</string>
 	<string name="invalidDiscount">Please enter a valid number for discount.</string>
@@ -37,7 +37,7 @@
 	<string name="errorLoadingList">There was an error loading the list. Please try again</string>
     <string name="errorImportingMessage">There were some errors importing. None of the sheets were imported.Please fix the issues and try again.</string>
     <string name="importFinished">Your import has finished.</string>
-    <string name="unexpectedError">Unfortunately there was an unexpected error. Click "Send Report" to send an error report to AJB Technologies. Click on "Home" to be taken to HoneyDew-It home screen.</string>
+	<string name="unexpectedError">Unfortunately there was an unexpected error. Click "Send Report" to send an error report to AJB Technologies. Click on "Home" to be taken to the application's home screen.</string>
 	<string name="chooseCalculatorDialogTitle">^ Calculator</string>
 	<string name="chooseCalculatorDialogMessage">Please choose the appropriate calculator to calculate ^</string>
 
