--- a/app/src/main/res/layout-port/monthtab.xml
+++ b/app/src/main/res/layout-port/monthtab.xml
@@ -2,19 +2,22 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/monthFrag"
-	android:orientation="vertical"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+	android:layout_height="fill_parent"
+	android:orientation="vertical">
 
-	<com.ajbtechnologies.calendar.customviews.CalendarView xmlns:app="http://schemas.android.com/apk/res/com.honeydewit"
+	<com.ajbtechnologies.calendar.customviews.CalendarView xmlns:app="http://schemas.android.com/apk/res/com.ajbtechnologies"
 	    android:id="@+id/calendarView"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		app:saveMonthOnConfigChange="true"
 		
 	/>
-	
-	<TextView android:text="@string/eventsDay" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
+
+	<TextView
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/eventsDay" />
 
 	<ListView android:id="@android:id/list" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" />
